2009-02-12  David Sedeño <david@alderia.com>
	
	* epiphany-extension/gwget.xml.in.in: Set author and url.
	* epiphany-extension/Makefile.am: Include @GNOME_CFLAGS@ 
	to INCLUDE_CFLAGS so it can find libgnomeui.h. Fix bug #571790.
	* configure.ac: Detects Epiphany > 2.18. Patch from 
	Christoph Wickert. Fix bug #571789.
	* Changelog: Convert to UTF-8

2009-02-12  David Sedeño <david@alderia.com>

	* NEWS: news for 1.00
	* configure.ac: Bump version to 1.00
	* configure.ac: Require gio and not gnome-vfs.
	* src/gwget_data.c, src/main_window.c, src/main_window_cb.c, 
	src/main.c: Port to gio for local operations.

2009-02-08  David Sedeño <david@alderia.com>

	* data/gwget.glade: Set url label ellipsize to FINAL.

2009-02-07  David Sedeño <david@alderia.com>

	* src/gwget-application{.c, .h}, src/gwget-application-service.xml,
	  main.c: Add destination directory parameter to OpenURI method. 
	  Fixes: #562993
	
2009-02-06  David Sedeño <david@alderia.com>

	* data/gwget.glade: Set Radiobuttons in recursive window in a group.
	Fix bug #533152.
	* data/preferences.glade: Fix GtkSpinButton Adjustment.

2009-02-06  David Sedeño <david@alderia.com>

	Patch from Michael Fotsch <foetsch@yahoo.com> with: 
	* src/gwget_data.c: Support of mp3 playlist: When gwget finishes 
	downloading an .m3u file, it asks the user whether it should download 
	the files that it contains. If yes, the files will be added as 
	additional downloads. 
	* src/wget_data.c: Parser for wget version 1.11.4 
	* Moved check_url function to utils.{.c.h} 
	* In several places, leading and trailing whitespace is stripped from 
	the user-specified URL. (This is a common pitfall when inadvertently 
	copying leading spaces or trailing newlines into the clipboard.)

2008-09-09  David Sedeño <david@alderia.com>

	* src/gwget_data.h: Ooops, forget to commit that.

2008-08-28  David Sedeño <david@alderia.com>

	* src/wget-log.c: More error reporting checking and better general log parsing and 